authentik/authentik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.mandariini.uk`)
      services:
        - name: authentik-server
          namepsace: authentik
          port: 80
  tls:
    secretName: mandariini-uk-tls
