authentik/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
    - websecxt
  routes:
    - kind: Rule
      match: Host(`auth.mandariini.uk`)
      services:
        - name: authentik-server
          namespace: authentik
          port: 80
  tls:
    secretName: mandariini-uk-tls
